--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.8'
 
 services:
   web:
-    build: ./FairyTest
+    build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./FairyTest/:/usr/src/FairyTest/
+      - .:/usr/src/FairyTest/
     ports:
       - 8000:8000
     env_file:
@@ -13,6 +13,7 @@ services:
     depends_on:
       - db
     restart: always
+
   db:
     image: postgres:15.2-alpine
     volumes:
