--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=secretkey
-ALLOWED_HOSTS=localhost 127.0.0.1[::1]
+ALLOWED_HOSTS=localhost
 POSTGRES_ENGINE=django.db.backends.postgresql
 POSTGRES_DB=FairyTest
 POSTGRES_USER=postgres
